fixed spacing

--- a/now-ui-kit.css
+++ b/now-ui-kit.css
@@ -317,7 +317,7 @@ h2, .h2 {
   font-size: 2.5em; }
 
 h3, .h3 {
-  font-size: 2em; }
+  font-size: 1.8em; }
 
 h4, .h4 {
   font-size: 1.714em; }
